Updated Permissions and removed my Discord WebHook

--- a/plugin.yml
+++ b/plugin.yml
@@ -6,3 +6,7 @@ api:
 commands:
   discord:
     description: "Hey World"
+    permission: discord.talk
+permissions:
+  discord.talk:
+    default: op
